--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "web-animations-js",
+  "name": "web-animations-js-extension",
   "description": "JavaScript implementation of the Web Animations API",
   "repository": {
     "type": "git",
     "url": "https://github.com/web-animations/web-animations-js.git"
   },
-  "version": "2.3.2",
+  "version": "2.3.3",
   "keywords": [
     "animations",
     "polyfill"
