chore: 更改常用命令

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "git",
     "url": "https://github.com/web-animations/web-animations-js.git"
   },
-  "version": "2.3.4",
+  "version": "2.3.5",
   "keywords": [
     "animations",
     "polyfill"
@@ -44,7 +44,7 @@
   },
   "scripts": {
     "build": "cat tools/pre.js tools/scope.js $(cat src/fileOrder.txt) tools/post.js | uglifyjs > web-animations.min.js",
-    "publish": "npm run build && npm publish",
+    "deploy": "npm run build && npm publish",
     "test": "grunt web-animations web-animations-next test gjslint git-status checkrepo"
   }
 }
